[package]
# "http" was taken, "https" (with 's' apparently standing for "server") is free
name = "https"
description = "Host These Things Please - a basic http server for hosting a folder fast and simply"
repository = "https://github.com/thecoshman/http"
readme = "README.md"
keywords = ["http", "server", "https", "webdav", "directory"]
categories = ["network-programming", "web-programming::http-server"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "1.9.1"
# Remember to also update in http.md
authors = ["thecoshman <rust@thecoshman.com>",
           "nabijaczleweli <nabijaczleweli@gmail.com>",
           "pheki"]

[dependencies]
hyper-native-tls = "0.3"
percent-encoding = "2.1"
lazy_static = "1.4"
serde_json = "0.9"
mime_guess = "1.8"
tabwriter = "1.1"
itertools = "0.8"
lazysort = "0.2"
brotli2 = "0.3"
unicase = "2.4"
walkdir = "2.2"
base64 = "0.10"
flate2 = "1.0"
rfsapi = "0.1"
xml-rs = "0.8"
bzip2 = "0.3"
ctrlc = "3.1"
regex = "1.2"
serde = "0.9"
clap = "2.33"
rand = "0.7"
time = "0.1"
md6 = "2.0"

[dependencies.trivial_colours]
version = "0.3"
default-features = false

[dependencies.cidr]
version = "0.1"
default-features = false

[dependencies.iron]
version = "0.6"
features = ["hyper-native-tls"]

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["fileapi"]

[target.'cfg(not(target_os = "windows"))'.dependencies.os-str-generic]
version = "0.2"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.dependencies.libc]
version = "0.2"

[build-dependencies]
embed-resource = "1.3"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.build-dependencies.cc]
version = "1.0"


[[bin]]
name = "http"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "httplz"
path = "src/main.rs"
test = false
doc = false


[package.metadata.deb]
name = "http"
maintainer = "nabijaczleweli <nabijaczleweli@gmail.com>"
section = "web"
