[package]
# "http" was taken, "https" (with 's' apparently standing for "server") is free
name = "https"
description = "Host These Things Please - a basic http server for hosting a folder fast and simply"
repository = "https://github.com/thecoshman/http"
readme = "README.md"
keywords = ["http", "server", "https", "webdav", "directory"]
categories = ["network-programming", "web-programming::http-server"]
license = "MIT"
build = "build.rs"
# Remember to also update in appveyor.yml
version = "2.0.0"
# Remember to also update in http.md
authors = ["thecoshman <rust@thecoshman.com>",
           "nabijaczleweli <nabijaczleweli@nabijaczleweli.xyz>",
           "pheki",
           "Adrian Herath <adrianisuru@gmail.com>",
           "cyqsimon",
           "jim4067",
           "Orhun Parmaksız <orhunparmaksiz@gmail.com>",
           "Kian-Meng Ang <kianmeng@cpan.org>",
           "Theodore Ni"]

[dependencies]
hyper-native-tls = "0.3"
percent-encoding = "2.1"
serde_json = "1.0"
mime_guess = "1.8"
tabwriter = "1.1"
itertools = "0.8"
arrayvec = "0.7"
walkdir = "2.2"
blake3 = "1.3"
flate2 = "1.0"
xml-rs = "0.8"
ctrlc = "3.1"
serde = "1.0"
clap = "2.33"
libc = "0.2"
rand = "0.7"
time = "0.1"

[dependencies.trivial_colours]
version = "0.3"
default-features = false

[dependencies.rfsapi]
path = "vendor/rfsapi-0.2.0"

[dependencies.cidr]
version = "0.1"
default-features = false

[dependencies.brotli]
version = "6.0"
features = ["simd"]

[dependencies.iron]
path = "vendor/iron-0.6.1"
features = ["hyper-native-tls"]

[patch.crates-io.hyper]
path = "vendor/hyper-0.10.16"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["fileapi"]


[build-dependencies]
embed-resource = "1.3"
base64 = "0.10"

[target.'cfg(not(any(target_os = "windows", target_os = "macos")))'.build-dependencies.cc]
version = "1.0"


[[bin]]
name = "http"
path = "src/main.rs"
test = false
doc = false

[[bin]]
name = "httplz"
path = "src/main.rs"
test = false
doc = false


[package.metadata.deb]
name = "http"
maintainer = "nabijaczleweli <nabijaczleweli@gmail.com>"
section = "web"
