[package]
# "http" was taken, "https" (with 's' apparently standing for "server") is free
name = "https"
description = "Host These Things Please - a basic http server for hosting a folder fast and simply (now git-only: cargo install --git https://github.com/thecoshman/http)"
repository = "https://github.com/thecoshman/http"
readme = "README.md"
keywords = ["http", "server", "https", "webdav", "directory"]
categories = ["network-programming", "web-programming::http-server"]
license = "MIT"
build = "build.rs"
version = "2.2.1"
# Remember to also update in http.md
authors = ["nabijaczleweli@nabijaczleweli.xyz"]


[[bin]]
name = "http"
path = "build.rs"

[[bin]]
name = "httplz"
path = "build.rs"
